@@ -4,8 +4,11 @@ count source line and visualize (using R)
    and visualize using barplot <2012-02-20, Mon>
 
    
+chapter 8
+ o implemented exercies 1-2 <2012-02-27, Mon>
+ 
 chapter 7
- o implemented exercies 7-9 <2012-02-23, Thu>
+ o implemented exercies 7-9 <2012-02-23, Thu> 
  o implemented exercies 3-6 <2012-02-22, Wed>
  o implemented exercies 2 <2012-02-20, Mon> 
  o implemented exercies 1 <2012-02-18, Sat>
